tests/NormalTests/paczka1/small_fuzzy/18474736.err
Error in line 4: wSQNgd11n A55 0,2
Error in line 6: u6h A83 57,0
